<resources>
    <string name="app_name">Vitu</string>

    <string name="open">Open</string>
    <string name="colose">Close</string>
    <string name="text_back_exit">Click BACK lần nữa để thoát</string>
    <string name="vitu_base">VITU</string>
    <string name="vitu">Vitu</string>
    <string name="login_info">Đăng nhập</string>
    <string name="phone">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="dont_account">Chưa có tài khoản</string>
    <string name="have_account">Đã có tài khoản</string>
    <string name="register">Đăng ký</string>
    <string name="name">Họ và tên</string>
    <string name="gender">Giới tính</string>
    <string name="birthday">Năm sinh</string>
    <string name="school">Trường học</string>
    <string name="home_town">Quê quán</string>
    <string name="classify">Phân loại</string>
    <string name="experience">Kinh nghiệm</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="student">Sinh viên</string>
    <string name="graduating">Đã tốt nghiệp</string>
    <string name="_1">Dưới 1 năm</string>
    <string name="_1_3">1-3 năm</string>
    <string name="_3_5">3-5 năm</string>
    <string name="_5">Trên 5 năm</string>
    <string name="next">Tiếp tục</string>
    <string name="login_google">ĐĂNG NHẬP VỚI GOOGLE</string>
    <string name="login_facebook">ĐĂNG NHẬP VỚI FACEBOOK</string>
</resources>
