<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorMain"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/vitu_base"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/mTvBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/app_bar"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/vitu_base"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/_26sdp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/mEdtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_11sdp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/mEdtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_11sdp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/mEdtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_11sdp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/mTvGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:text="@string/gender"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_11sdp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/mEdtBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/birthday"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_11sdp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/mEdtSchool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/school"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_11sdp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/mEdtHomeTown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/home_town"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_11sdp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/mTvClassify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:text="@string/classify"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_11sdp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/mTvExperience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:text="@string/experience"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_11sdp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/mEdtCaseClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:imeOptions="actionNext"
                android:text="Môn học"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_11sdp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/mTvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/have_account"
                android:textColor="@color/colorMain"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/mTvRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
