<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/mLinearProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/bg_dialog_profile"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mTvMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/male"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/mTvFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/female"
            android:textStyle="bold|italic" />
    </android.support.v7.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/mImgCancelDialog"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/mLinearProfile"
        android:layout_marginTop="@dimen/dialog_cancel"
        android:background="@drawable/ic_btn_cancel_chat" />
</RelativeLayout>
